# Simple-Library-with-FastAPI-and-React

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend/: database.py  db_data_handlers.py  decorators.py  dependencies.py  exceptions.py  main.py  settings.py  tables.py
backend/api_library/: __init__.py  authors.py  books.py  unloads.py
backend/api_library/responses/: authors.py  books.py
backend/db/: facade.py
backend/db/dao/: authors.py  books.py
backend/db/mock/: authors.py  books.py  facade.py
backend/db/real/: authors.py  base.py  books.py
backend/init_data/: authors.json  books.json
backend/models/: __init__.py  authors.py  books.py
backend/services/: __init__.py  authors.py  books.py  init_db.py  save_data.py  unloads.py  ws_notifications.py
backend/tests/: base.py  test_authors.py  test_books.py  test_unloads.py  test_ws_notifications.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  index.scss
frontend/src/axios/: axios-dj-api.js
frontend/src/components/: AuthorSelect.js  Error.js  FormInput.js  Layout.js  Loader.js  Navbar.js
frontend/src/components/BookSearch/: PageSearchGroup.js  YearSearchGroup.js
frontend/src/hoc/: Notifications.js
frontend/src/pages/: AuthorCreate.js  BookChange.js  BookCreate.js  BookDetail.js  Home.js
frontend/src/store/: actionTypes.js
src/: main.py  tables.py
src/api_library/: __init__.py  authors.py
src/models/: __init__.py  authors.py
src/services/: authors.py
(+16 files in other folders)
