[tool.poetry]
name = "fastapi_library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.36"
loguru = "^0.6.0"
requests = "^2.27.1"
psycopg2-binary = "2.9.1"
websockets = "^10.3"
Jinja2 = "^3.1.2"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
